[package]
name = "face"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
faiss = { git = "https://github.com/MichaelMcCulloch/faiss-rs.git", tag = "master-avx", features = [
    "static",
    "gpu",
] }
log = "0.4.21"
nolock = { version = "0.4.1", features = ["async"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ['actix-web'] }
